<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
     <RelativeLayout
        android:id="@+id/setting_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/favorite_blue"
        android:orientation="vertical">
         <Button
             android:id="@+id/setting_btn_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"     
             android:layout_centerVertical="true"     
             android:background="@drawable/bottom_icon_back_selector" />
         <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:textSize="21sp"
		    android:id="@+id/setting_title"
		    android:layout_gravity="center"
		    android:text="@string/action_settings"/>
    </RelativeLayout>

		<TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
		    android:id="@+id/interval_label"
		    android:text="@string/synchronisation_interval"/>
			
     	<TimePicker   
        android:id="@+id/interval"  
        android:layout_height="wrap_content"  
        android:layout_width="match_parent"
        />  
        
     
		<TextView
		            android:layout_width="match_parent"
        android:layout_height="wrap_content"
		    
		    android:id="@+id/notification_label"
		    android:text="@string/notification_type"/>
		    	    <CheckBox
	    android:id="@+id/sound"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/sound"
	    /> 
		    
		<CheckBox
    	android:id="@+id/vibration"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/vibration"
 
    	/> 
    	<Button
    	    android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
    	    android:id="@+id/submit"
    	    android:layout_gravity="center"
    	    android:text="@string/submit"
    	    />    
</LinearLayout>
